--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,12 @@
+<% provide(:title, "About") %>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+    </head>
+
+<body>
+
 <h1>About</h1>
 <p>The <a href="https://www.railstutorial.org/"><em>Ruby on Rails
 Tutorial</em></a>, part of the
@@ -9,3 +18,6 @@ to teach web development with
 <a href="https://rubyonrails.org/">Ruby on Rails</a>.
 This is the sample app for the tutorial.
 </p>
+
+</body>
+</html>
