--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,12 @@
+<% provide(:title, "Help") %>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+    </head>
+
+<body>
+
 <h1>Help</h1>
 
 <p>Get help on the Ruby on Rails Tutorial at the
@@ -6,3 +15,6 @@
     <a href="https://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
     book</a>.
 </p>
+
+</body>
+</html>
