--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,7 @@
-<% provide(:title, "Home") %>
-
 <!DOCTYPE html>
 <html>
     <head>
-        <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+        <title><%= yield(:title) %></title>
     </head>
 
 <body>
