--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
     <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
     </div>
     <%= link_to image_tag('hinata.png', alt: 'Rails logo', width: '200px'), "https://rubyonrails.org/" %> 
-     <%= link_to image_tag('nvk.png', alt: 'Rails logo', width: '200px'), class:'hide' %>
+     <%= link_to image_tag('nvk.png', alt: 'Rails logo', width: '200px') %>
 </body>
 </html>
 
